<resources>
    <string name="app_name">EjNavigationCorreoTutoriail</string>
    <string name="open_nav">Open navigation drawer</string>
    <string name="close_nav">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recived">Recived</string>
    <string name="sent">Sent</string>
    <string name="unread">Unread</string>
    <string name="spam">Spam</string>
    <string name="trash">Trash</string>
    <string name="more_options">More options</string>
</resources>